--- a/Hexagram.MVC/Views/_ViewImports.cshtml
+++ b/Hexagram.MVC/Views/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿@* @using Hexagram.MVC
-@using Hexagram.MVC.Models
+﻿
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
- *@
+@addTagHelper *, AuthoringTagHelpers
